# ai_growth_strategist

./: .gitignore  LICENSE  README.md  Video generation workflow.json  WARP.md  main.py  pyproject.toml
backend/: .env.example  API_DOCS.md  CHAT_MVP_DOCS.md  CHAT_MVP_PRO_UPGRADE.md  CHAT_MVP_TECH_SPEC.md  CHAT_PRO_UI_GUIDE.md  CHAT_QUIZ_WORKPLAN.md  ERROR_HANDLING.md  FRONTEND_TEST_GUIDE.md  GAP_ANALYSIS_AND_IMPROVEMENTS.md  HTML_REGENERATION_GUIDE.md  INTEGRATION_CHECKLIST.md  Makefile  PITCH_DECK.md  POLICY_API_DOCS.md  POLICY_HTML_UPDATE_SUMMARY.md  PRESENTATION_IMPROVEMENTS.md  PROMPT_UPDATE_SUMMARY.md  QUICKSTART.md  README.md  VIDEO_ANALYSIS_QUICKSTART.md  VIDEO_STREAMING_DOCS.md  VIDEO_STREAMING_EXPLAINED.md  analyze.py  creatives.py  demo_video_analysis.py  example.env  example_usage.py  example_video_analysis.py  examples.txt  list_gemini_models.py  pyproject.toml  regenerate_html_enhanced.py  regenerate_html_reports.py  test_api.py  test_apify_direct.py  test_auto_analyze.py  test_full_pipeline.py  test_new_prompt_integration.py  test_policy_check.py  (+6 more)
backend/analysis/: analysis_1285097509489804.json  analysis_782583224668514.json  video_analysis_c76cda2a3490430d.json
backend/creatives/: Guru Apps_102120057962217_20251004_152910.json  Guru Apps_102120057962217_20251004_173224.json  Новий Акрополь Україна_224625867554338_20251004_174335.json  Новий Акрополь Україна_224625867554338_20251004_180835.json  Новий Акрополь Україна_224625867554338_20251004_183200.json  Новий Акрополь Україна_224625867554338_20251004_190424.json  (+12 more)
backend/src/: main.py  main_example.py
(+113 files in other folders)
