[project]
name = "backend"
version = "0.1.0"
description = "Facebook Ads Library Backend with Clean Architecture"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0",
    "apify-client>=2.1.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.4.0",
    "aiofiles>=23.2.0",
    "httpx>=0.27.0",
    "google-generativeai>=0.8.5"
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
]

[project.scripts]
analyze-mvp = "src.analysis.cli:main"
